--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <title>Contact Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -162,3 +163,4 @@
         }
         </script>
 </body>
+</html>
